# DjangoShop

./: .env.sample  README.md  pyproject.toml
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: category.json  product.json
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version_version_unique_current_version.py  0003_alter_version_is_current_alter_version_version_name_and_more.py  0004_product_user.py  0005_alter_product_options_product_is_published.py
catalog/templates/catalog/: categories_list.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/main/: contacts.html  home.html
catalog/templates/products/: product_detail.html  products_list.html
config/: settings.py  urls.py
materials/: forms.py  models.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_materials_is_published_and_more.py
materials/templates/materials/: materials_confirm_delete.html  materials_detail.html  materials_form.html  materials_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/fixtures/: groups.json  groups_permissions.json  users.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_avatar_alter_user_country_and_more.py
users/templates/registration/: login.html
users/templates/users/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  (+2 more)
(+4 files in other folders)
