[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Bloodimirg <bloodimirg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.4.2"
shell = "^1.0.1"
ipython = "^8.26.0"
pytils = "^0.4.1"
django = "4.2.2"
redis = "^5.0.8"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
